--- a/thesis/abstract_en.tex
+++ b/thesis/abstract_en.tex
@@ -4,25 +4,36 @@ machine translation systems have emerged.
 One of the approaches that proposes fundamental changes to the model
 architecture are non-autoregressive models.
 %
-The autoregressive models impose conditional dependence of the generated words
-on the previously decoded outputs.
+In standard autoregressive models, the output token distributions are
+conditioned on the previously decoded outputs.
+% Autoregressive models impose conditional dependence of the generated words on
+% the previously decoded outputs.
 %
-This dependency allows the model to keep track of the state of the decoding
-process, which improve the fluency of the output.
+The conditional dependence allows the model to keep track of the state of the
+decoding process, which improves the fluency of the output.
 %
 On the other hand, it requires the neural network computation to be run
-sequentially, and thus cannot be parallelized.
+sequentially, and thus it cannot be parallelized.
 %
 Non-autoregressive models impose conditional independence on the output
-probability distributions, which means that the decoding process is
-parallelizable and hence the decoding speed improves.
+distributions, which means that the decoding process is parallelizable and
+hence the decoding speed improves.
 %
-The goal of non-autoregressive machine translation is to match the translation
-quality of autoregressive models, while at the same time reducing the decoding
-latency.
+A major drawback of this approach is lower translation quality compared to the
+autoregressive models.
 %
-In this thesis, we explore the research progress so far, and bring together
-a number of techniques that allow the fulfillment of the stated goal.
+The goal of non-autoregressive machine translation is to improve the
+translation quality, while retaining high decoding speed.
+%
+In this thesis, we explore the research progress so far, and bring together a
+number of techniques to advance towards the stated goal.
+%
+We experiement with non-autoregressive models trained with connectionist
+temporal classification.
+%
+\JH{sentence or two about the methods and findings}
+
+
 
 
 %%% Local Variables:
