--- a/thesis/img/throughputs/cpu-shortlist.tex
+++ b/thesis/img/throughputs/cpu-shortlist.tex
@@ -1,6 +1,6 @@
 \begin{tikzpicture}[gnuplot]
 %% generated with GNUPLOT 5.2p8 (Lua 5.3; terminal rev. Nov 2018, script rev. 108)
-%% Thu 11 Nov 2021 09:32:00 PM GMT
+%% Sat 13 Nov 2021 05:08:26 PM GMT
 \path (0.000,0.000) rectangle (13.500,8.000);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
@@ -57,28 +57,33 @@
 \draw[gp path] (1.872,7.691)--(1.872,0.985)--(12.947,0.985)--(12.947,7.691)--cycle;
 \node[gp node center,rotate=-270] at (0.016,4.338) {Decoding time (seconds)};
 \node[gp node center] at (7.409,0.215) {Batch size};
-\node[gp node right] at (12.031,7.280) {\acs{ar} Large};
+\node[gp node right] at (12.031,7.280) {\acs{ar} Big};
 \gpcolor{rgb color={0.200,0.200,0.200}}
 \gpsetlinewidth{2.50}
 \draw[gp path] (12.215,7.280)--(12.579,7.280);
-\draw[gp path] (6.205,7.691)--(6.618,7.059)--(8.201,5.875)--(9.783,5.296)--(11.365,5.064)%
-  --(12.947,5.039);
+\draw[gp path] (6.200,7.691)--(6.618,7.064)--(8.201,5.879)--(9.783,5.296)--(11.365,5.077)%
+  --(12.947,5.049);
 \gpsetpointsize{4.00}
-\gppoint{gp mark 1}{(6.618,7.059)}
-\gppoint{gp mark 1}{(8.201,5.875)}
+\gppoint{gp mark 1}{(6.618,7.064)}
+\gppoint{gp mark 1}{(8.201,5.879)}
 \gppoint{gp mark 1}{(9.783,5.296)}
-\gppoint{gp mark 1}{(11.365,5.064)}
-\gppoint{gp mark 1}{(12.947,5.039)}
+\gppoint{gp mark 1}{(11.365,5.077)}
+\gppoint{gp mark 1}{(12.947,5.049)}
 \gppoint{gp mark 1}{(12.397,7.280)}
 \gpcolor{color=gp lt color border}
 \node[gp node right] at (12.031,6.818) {\acs{ar} Base};
 \gpcolor{rgb color={0.800,0.800,0.800}}
 \draw[gp path] (12.215,6.818)--(12.579,6.818);
-\draw[gp path] (6.200,7.691)--(6.618,7.064)--(8.201,5.879)--(9.783,5.296)--(11.365,5.077);
-\gppoint{gp mark 2}{(6.618,7.064)}
-\gppoint{gp mark 2}{(8.201,5.879)}
-\gppoint{gp mark 2}{(9.783,5.296)}
-\gppoint{gp mark 2}{(11.365,5.077)}
+\draw[gp path] (1.872,5.704)--(3.454,4.014)--(5.036,3.068)--(6.618,2.623)--(8.201,2.307)%
+  --(9.783,2.167)--(11.365,2.131)--(12.947,2.142);
+\gppoint{gp mark 2}{(1.872,5.704)}
+\gppoint{gp mark 2}{(3.454,4.014)}
+\gppoint{gp mark 2}{(5.036,3.068)}
+\gppoint{gp mark 2}{(6.618,2.623)}
+\gppoint{gp mark 2}{(8.201,2.307)}
+\gppoint{gp mark 2}{(9.783,2.167)}
+\gppoint{gp mark 2}{(11.365,2.131)}
+\gppoint{gp mark 2}{(12.947,2.142)}
 \gppoint{gp mark 2}{(12.397,6.818)}
 \gpcolor{color=gp lt color border}
 \node[gp node right] at (12.031,6.356) {Large};
