--- a/thesis/org/evaluation.org
+++ b/thesis/org/evaluation.org
@@ -154,18 +154,21 @@
 
 *** Latency
 
-  |---------+----------------------------+------------------------|
-  | Model   | Latency - CPU 1 Core (x10) | Latency - CPU 36 cores |
-  |---------+----------------------------+------------------------|
-  | AR Big  |                            |                  52087 |
-  | AR Base |                            |                        |
-  |---------+----------------------------+------------------------|
-  | Large   |                      35013 |                  14542 |
-  | Base    |                       9463 |                   3508 |
-  | Small   |                       6196 |                   2346 |
-  | Micro   |                       5108 |                   1952 |
-  | Tiny    |                       1581 |                    784 |
-  |---------+----------------------------+------------------------|
+    SINGLE CORE: we use 10 times smaller dataset because the million sentences
+    took forever
+
+  |---------+----------------------------|
+  | Model   | Latency - CPU 1 Core (x10) |
+  |---------+----------------------------|
+  | AR Big  |                            |
+  | AR Base |                            |
+  |---------+----------------------------|
+  | Large   |                      35013 |
+  | Base    |                       9463 |
+  | Small   |                       6196 |
+  | Micro   |                       5108 |
+  | Tiny    |                       1581 |
+  |---------+----------------------------|
 
 
 
@@ -173,25 +176,26 @@
 
   Different batch sizes on 36 cores
 
-  |---------+------|
-  | Model   | b=64 |
-  |---------+------|
-  | AR Base | 9370 |
-  |---------+------|
-  | Large   | 8238 |
-  | Base    | 2934 |
-  | Small   | 1936 |
-  | Micro   | 1607 |
-  | Tiny    |  701 |
-  |---------+------|
+  |------------------+-------+------+------+------+-------+-------+------+------|
+  | Batch @ 36 Cores |     1 |    2 |    4 |    8 |    16 |    32 |   64 |  128 |
+  |------------------+-------+------+------+------+-------+-------+------+------|
+  | AR Big           | 52087 |      |      |      | 12166 | 10151 | 9370 | 9244 |
+  | AR Base          | 16293 | 9727 | 7191 | 5420 |  3635 |  2925 | 2707 | 2664 |
+  |------------------+-------+------+------+------+-------+-------+------+------|
+  | Large            | 14542 |      |      | 8657 |  8357 |  8247 | 8238 |      |
+  | Base             |  3508 |      |      | 2927 |  2921 |  2920 | 2934 | 2948 |
+  | Small            |  2346 |      |      | 1933 |  1921 |  1921 | 1936 | 1950 |
+  | Micro            |  1952 |      |      | 1600 |  1588 |  1587 | 1607 | 1627 |
+  | Tiny             |   784 |      |      |  687 |   685 |   694 |  701 |  719 |
+  |------------------+-------+------+------+------+-------+-------+------+------|
 
 *** Shortlist at 36 CPU cores
 
     |---------+-------+-------+-------+-------+-------+------+------+------|
     | Batch   |     1 |     2 |     4 |     8 |    16 |   32 |   64 |  128 |
     |---------+-------+-------+-------+-------+-------+------+------+------|
-    | AR Big  |       | 27977 | 18914 | 13597 | 10946 | 9643 | 9154 | 9090 |
-    | AR Base |       |       |       |       |       |      |      | 2587 |
+    | AR Big  | 41168 | 27977 | 18914 | 13597 | 10946 | 9643 | 9154 | 9090 |
+    | AR Base | 10555 |  6776 |  4660 |  3664 |  2957 | 2643 | 2564 | 2587 |
     |---------+-------+-------+-------+-------+-------+------+------+------|
     | Large   | 12799 |  9870 |  8245 |  7545 |  7434 | 7511 | 7639 |      |
     | Base    |  2549 |  2298 |  2263 |  2306 |  2399 | 2503 | 2609 | 2707 |
@@ -203,16 +207,14 @@
 **** Export
 
     | Batch | AR Big | AR Base | Large | Base | Small | Micro | Tiny |
-    |     1 |  41168 |         | 12799 | 2549 |  1346 |   958 |  244 |
-    |     2 |  27977 |         |  9870 | 2298 |  1246 |   897 |  246 |
-    |     4 |  18914 |         |  8245 | 2263 |  1250 |   913 |  273 |
-    |     8 |  13597 |         |  7545 | 2306 |  1306 |   974 |  316 |
-    |    16 |  10946 |         |  7434 | 2399 |  1399 |  1062 |  373 |
-    |    32 |   9643 |         |  7511 | 2503 |  1497 |  1163 |  437 |
-    |    64 |   9154 |         |  7639 | 2609 |  1606 |  1271 |  506 |
-    |   128 |   9090 |         |       | 2707 |  1714 |  1380 |  582 |
-
-
+    |     1 |  41168 |   10555 | 12799 | 2549 |  1346 |   958 |  244 |
+    |     2 |  27977 |    6776 |  9870 | 2298 |  1246 |   897 |  246 |
+    |     4 |  18914 |    4660 |  8245 | 2263 |  1250 |   913 |  273 |
+    |     8 |  13597 |    3664 |  7545 | 2306 |  1306 |   974 |  316 |
+    |    16 |  10946 |    2957 |  7434 | 2399 |  1399 |  1062 |  373 |
+    |    32 |   9643 |    2643 |  7511 | 2503 |  1497 |  1163 |  437 |
+    |    64 |   9154 |    2564 |  7639 | 2609 |  1606 |  1271 |  506 |
+    |   128 |   9090 |    2587 |       | 2707 |  1714 |  1380 |  581 |
 
 
 ** GPU
