--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -1,9 +1,33 @@
+@inproceedings{Behnke-wmt21-speed,
+  author = {Maximiliana Behnke and Nikolay Bogoychev and Alham Fikri Aji and Kenneth Heafield and Graeme Nail and Qianqian Zhu and Svetlana Tchistiakova and Jelmer van der Linde and Pinzhen Chen and Sidharth Kashyap and Roman Grundkiewicz},
+  title = {Efficient Machine Translation with Model Pruning and Quantization},
+  year = {2021},
+  month = nov,
+  month_numeric = {11},
+  booktitle = {Proceedings of the Conference on Machine Translation at the 2021 Conference on Empirical Methods in Natural Language Processing},
+  address = {Punta Cana, Dominican Republic},
+  url = {https://kheafield.com/papers/edinburgh/wmt21-speed.pdf}
+}
+
+@InProceedings{akhbardeh-etal-2021-findings,
+  author    = {Akhbardeh, Farhad  and  Arkhangorodsky, Arkady  and  Biesialska, Magdalena  and  Bojar, Ondřej  and  Chatterjee, Rajen  and  Chaudhary, Vishrav  and  Costa-jussa, Marta R.  and  España-Bonet, Cristina  and  Fan, Angela  and  Federmann, Christian  and  Freitag, Markus  and  Graham, Yvette  and  Grundkiewicz, Roman  and  Haddow, Barry  and  Harter, Leonie  and  Heafield, Kenneth  and  Homan, Christopher  and  Huck, Matthias  and  Amponsah-Kaakyire, Kwabena  and  Kasai, Jungo  and  Khashabi, Daniel  and  Knight, Kevin  and  Kocmi, Tom  and  Koehn, Philipp  and  Lourie, Nicholas  and  Monz, Christof  and  Morishita, Makoto  and  Nagata, Masaaki  and  Nagesh, Ajay  and  Nakazawa, Toshiaki  and  Negri, Matteo  and  Pal, Santanu  and  Tapo, Allahsera Auguste  and  Turchi, Marco  and  Vydrin, Valentin  and  Zampieri, Marcos},
+  title     = {Findings of the 2021 Conference on Machine Translation (WMT21)},
+  booktitle      = {Proceedings of the Sixth Conference on Machine Translation},
+  month          = {November},
+  year           = {2021},
+  address        = {Online},
+  publisher      = {Association for Computational Linguistics},
+  pages     = {1--93},
+  url       = {https://aclanthology.org/2021.wmt-1.1}
+}
+
 @article{haddow2021survey,
-  title={Survey of Low-Resource Machine Translation},
+title={Survey of Low-Resource Machine Translation},
   author={Haddow, Barry and Bawden, Rachel and Barone, Antonio Valerio Miceli and Helcl, Jind{\v{r}}ich and Birch, Alexandra},
   journal={arXiv preprint arXiv:2109.00486},
   year={2021}
 }
+
 @book{goodfellow2016deep,
   title={Deep learning},
   author={Goodfellow, Ian and Bengio, Yoshua and Courville, Aaron},
@@ -87,13 +111,15 @@ journal = {amodern}
 }
 
 @inproceedings{heafield-etal-2021-findings,
-  title={Findings of the {WMT} 2021 Shared Task on Efficient Translation},
-  author={Heafield, Kenneth and Zhu, Qianqian and Grundkiewicz, Roman},
-  bootktitle={Proceedings of the Sixth Conference on Machine Translation},
-  month=nov,
-  year={2021},
-  address="Online",
-  publisher="Association for Computational Linguistics"}
+  author = {Kenneth Heafield and Qianqian Zhu and Roman Grundkiewicz},
+  title = {Findings of the {WMT} 2021 Shared Task on Efficient Translation},
+  year = {2021},
+  month = nov,
+  month_numeric = {11},
+  booktitle = {Proceedings of the Conference on Machine Translation at the 2021 Conference on Empirical Methods in Natural Language Processing},
+  address = {Punta Cana, Dominican Republic},
+  url = {https://kheafield.com/papers/edinburgh/wmt21-speedtask.pdf}
+}
 
 @misc{qian2021volctrans,
       title={The Volctrans GLAT System: Non-autoregressive Translation Meets WMT21},
